# catala-language-server

./: .eslintignore  .eslintrc.js  .gitattributes  .gitignore  .jscpd.json  .prettierignore  .vscode-test.mjs  .vscodeignore  CONTRIBUTING.md  Makefile  README-language-generated.md  README.md  catala-lsp.opam  catalaTestCaseEditor.ts  clerk.toml  config.json  dune  dune-project  eslint.config.mjs  extension.ts  jest.config.ts  knip.json  language-configuration.json  package-lock.json  package.json  package.nls.fr.json  package.nls.json  purgecss-check.js  testCaseEditor.ts  tsconfig.json  tsconfig.test.json  vitest.config.mts  vitest.config.ts  wallaby.jsconfig.js  webpack.config.js
.devcontainer/: Dockerfile  devcontainer.json
.husky/: pre-commit
catala-atd/: catala_types.atd  converter.ml  dune
client/: package-lock.json  package.json
docs/: docs.md  features.catala_en  grammar.md  save.md
l10n/: bundle.l10n.fr.json
lint_scripts/: i18n-check.js  i18n.js  purgecss-check.js
server/: .gitignore  catala_lsp.opam  dune  dune-project  package-lock.json  package.json  tsconfig.json
server/src/: custom_requests.ml  debug_evaluation.ml  debug_interpret.ml  debug_server.ml  diagnostic.ml  discovery.ml  doc_completion.ml  doc_completion.mli  doc_queries.ml  doc_queries.mli  document_processing.ml  dune  formatting.ml  jump.ml  jump_table.ml  log.ml  loop.ml  main.ml  main_dap.ml  main_lsp.ml  monad.ml  patched_dap.ml  position_map.ml  position_map.mli  projects.ml  projects.mli  server.ml  server.ts  server_state.ml  server_state.mli  server_state_types.ml  server_state_types.mli  server_types.ml  server_types.mli  state.ml  test_case_handler.ml  type_printing.ml  utils.ml
server/src/catala/: catalaServer.ts  parser.ts
server/src/catala/capabilities/: README.md  onCompletion.ts  onDefinition.ts
server/src/catala/modules/: getCatalaCliOutput.ts  getKeywords.ts
server/src/catala/tree-sitter/: Package.swift  binding.gyp  package-lock.json  package.json  setup.py
server/src/catala/tree-sitter-focus/: README.md  tree-sitter-focus.ts  tree-sitter-modules.ts
server/src/catala/tree-sitter/bindings/rust/: build.rs
server/src/catala/tree-sitter/src/: grammar.json  parser.c
server/src/profiler/: dune  profiler.ml  profiler.mli
server/src/profiler/backends/: dune  simple_profiler.ml
server/src/profiler/unix/: dune  profiler_instance.ml
server/src/shared/: CatalaTypes.ts  arrayUtils.ts  generateId.ts  printUtils.ts  uri-utils.ts  vscodeUtils.ts
server/src/test-case-parser/: dune  test_case_parser_lib.ml  testcase.ml  testcase_cli.ml  testcase_parser.ml  testcase_plugin.ml
server/src/test-case-parser/examples/: arith.catala_en  bool.catala_en  context.catala_en  diff.catala_en  francais.catala_fr  test_array_in_enum.catala_en  test_case_apl.catala_en  test_case_context.catala_en  test_case_context_array_override.catala_en  test_case_context_no_override.catala_en  test_case_kitchen_sink.catala_en  test_case_unparseable.catala_en  test_deep_nesting.catala_en  test_mixed_complexity.catala_en  test_sibling_arrays.catala_en  torture_tier2.catala_en
server/src/test-case-parser/examples/with-modules/: scope.catala_en  structs.catala_en
server/test/: dune  test.ml
server/test/fake-project/: clerk.toml
server/test/fake-project/a/: a.catala_en  b.catala_en
server/test/fake-project/b/: b.catala_en
server/test/fake-project/c/: c.catala_en
server/tests/: _parser-debugging.spec.ts  nodeMapping.spec.ts  parser.spec.ts
server/tests/__snapshots__/: nodeMapping.spec.ts.snap  parser.spec.ts.snap
server/tests/fixtures/: allSyntax.catala_en  cli.catala_en  combination_1structDecl_1scopeDecl.catala_en  combination_1structDecl_1scopeDecl_1scope.catala_en  combination_1structDecl_2scopeDecl.catala_en  definition_fieldName.catala_en  definition_fieldName_variable.catala_en  scope_and_definition.catala_en  scope_decl.catala_en  struct_decl.catala_en  struct_decl_1field.catala_en
server/tests/fixtures/tutorial/: tutorial_en.catala_en  tutorial_en_without_comments.catala_en
server/tests/test-helpers/: matchSnapshot.ts  rawTransform.cjs  readCatalaTestFile.ts
snippets/: catala_en.json  catala_fr.json
src/: App.tsx  ArrayEditor.tsx  AssertionValueEditor.tsx  CatalaTestCaseDocument.ts  CollapsibleRow.tsx  ContextMenu.tsx  Debounce.tsx  Results.tsx  Row.tsx  TestEditor.tsx  TestFileEditor.tsx  TestInputsEditor.tsx  TestOutputsEditor.tsx  ValidationUtils.tsx  ValueEditors.tsx  defaults.ts  extension.ts  logger.ts  lspRequests.ts  messages.ts  style.css  testAndCoverage.ts  testCaseCompilerInterop.ts  testCaseEditor.ts  testCaseUtils.ts  uiEntryPoint.ts  util.ts  util_client.ts  validation.ts
syntaxes/: catala.tmLanguage.json  code_en.xml  code_fr.xml  en.xml  fr.xml  types_en.iro  types_en.xml  types_fr.iro  types_fr.xml
test/: test_case_1.catala_fr  test_case_2.catala_fr
test-case-parser/: catala_types.atd  dune  dune-project  test_case.atd  test_case_parser.ml  test_case_parser_lib.ml  test_case_parser_lib_atd.ml  test_migration.ml  testcase.ml
test-case-parser/examples/: apl_locatif.catala_fr  arith.catala_en  arith_test.catala_en  bool.catala_en  clerk.toml  context.catala_en  enum_diff.catala_en  kitchensink.catala_en  test_apl.catala_en  test_case_apl.catala_en  test_case_arith.catala_en  test_case_bool.catala_en  test_case_bool.catala_fr  test_case_bool_fail.catala_en  test_case_bool_fr.catala_fr  test_case_context.catala_en  test_case_context_array_no_override.catala_en  test_case_context_array_override.catala_en  test_case_context_no_override.catala_en  test_case_diff.catala_en  test_case_empty.catala_en  test_case_enum.catala_en  test_case_french.catala_fr  test_case_kitchen_sink.catala_en  test_case_unparseable.catala_en  test_enum_array_payloads.catala_en  torture_tier1.catala_en
test-case-parser/examples/with-modules/: scope.catala_en  structs.catala_en
test-case-parser/examples/with-modules/subdir/: enums.catala_en
test-case-parser/test/: dune  test.ml
tests/: array-presence.ui.spec.tsx  arrayPresence.spec.ts  debugConfig.spec.ts  helpers.ts  (+6 more)
(+121 files in other folders)
