opam-version: "2.0"
version: "0.0.1"
name: "catala-lsp"
maintainer: "Vincent Botbol"
authors: [ "Vincent Botbol" ]
license: "Apache-2.0"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "ocaml" {>= "4.14.1"}
  "dune" { >= "3.0" }
  "catala"    { = "dev" }
  "logs"
  "uri"
  "linol"     { = "0.8" }
  "linol-lwt" { = "0.8" }
  "qcheck" { with-test & >= "0.21.3" }
  "atdgen" { build }
  "atdgen-runtime"
]
pin-depends: [
  ["catala.dev" "git+https://github.com/CatalaLang/catala"]
]
tags: [ "catala" "lsp" ]
homepage: "https://github.com/CatalaLang/catala-language-server"
dev-repo: "git+https://github.com/CatalaLang/catala-language-server.git"
bug-reports: "https://github.com/CatalaLang/catala-language-server/issues"
synopsis: "Catala Language Server Protocol (LSP)"
description:"Implementation of a Language Server Protocol (LSP) for Catala."
