opam-version: "2.0"
version: "1.0.0"
name: "catala-lsp"
maintainer: "Vincent Botbol"
authors: [ "Vincent Botbol" ]
license: "Apache-2.0"
build: [
  "dune"
  "build"
  "-p"
  name
  "-j"
  jobs
  "@install"
  "@runtest" {with-test}
]
depends: [
  "ocaml"     {>= "4.14.1"}
  "dune"      { >= "3.0" }
  "catala"
  "logs"
  "uri"
  "linol"     { = "0.10" }
  "linol-lwt" { = "0.10" }
  "dap"       { = "1.0.6" }
  "qcheck"    { with-test & >= "0.21.3" }
  "tezt"      { with-test }
  "atdgen"    { build }
  "atdgen-runtime"
  "ptime"
]
pin-depends: [
  ["catala.dev" "git+https://github.com/CatalaLang/catala"]
]
tags: [ "catala" "lsp" ]
homepage: "https://github.com/CatalaLang/catala-language-server"
dev-repo: "git+https://github.com/CatalaLang/catala-language-server.git"
bug-reports: "https://github.com/CatalaLang/catala-language-server/issues"
synopsis: "Catala Language Server Protocol (LSP)"
description:"Implementation of a Language Server Protocol (LSP) for Catala."
