opam-version: "2.0"
version: "1.1.0"
name: "catala-lsp"
maintainer: "Vincent Botbol"
authors: [ "Vincent Botbol" ]
license: "Apache-2.0"
build: [
  "dune"
  "build"
  "-p"
  name
  "-j"
  jobs
  "@install"
  "@runtest" {with-test}
]
depends: [
  "ocaml"          {>= "4.14.1"}
  "dune"           {>= "3.0"}
  "catala"         {>= "1.1.0" & < "1.2.0"}
  "logs"
  "uri"
  "linol"          {= "0.10"}
  "linol-lwt"      {= "0.10"}
  "dap"            {= "1.0.6"}
  "qcheck"         {with-test & >= "0.21.3"}
  "tezt"           {with-test}
  "atdgen"         {build}
  "atdgen-runtime"
  "ptime"
  "atdts"          {with-dev-setup & >= "2.16.0"}
  "ocamlformat"    {with-dev-setup & = "0.28.1"}
]
tags: [ "catala" "lsp" ]
homepage: "https://github.com/CatalaLang/catala-language-server"
dev-repo: "git+https://github.com/CatalaLang/catala-language-server.git"
bug-reports: "https://github.com/CatalaLang/catala-language-server/issues"
synopsis: "Catala Language Server Protocol (LSP)"
description:"Implementation of a Language Server Protocol (LSP) for Catala."
