(rule
 (targets catala_types_j.ml catala_types_j.mli)
 (deps catala_types.atd)
 (action
  (run atdgen -j -j-std %{deps})))

(rule
 (targets catala_types_t.ml catala_types_t.mli)
 (deps catala_types.atd)
 (action
  (run atdgen -t %{deps})))

(rule
 (mode (promote (into ../src/generated)))
 (target catala_types.ts)
 (deps catala_types.atd)
 (enabled_if %{bin-available:atdts})
 (action (run atdts %{deps})))

(library
 (package catala-lsp)
 (name catala_types_atd)
 (modules catala_types_t catala_types_j)
 (libraries atdgen-runtime)
)
