(rule
 (targets test_case_j.ml test_case_j.mli)
 (deps test_case.atd)
 (action
  (run atdgen -j -j-std %{deps})))

(rule
 (targets test_case_t.ml test_case_t.mli)
 (deps test_case.atd)
 (action
  (run atdgen -t %{deps})))

(library
 (package catala-lsp)
 (name test_case_atd)
 (modules test_case_t test_case_j)
 (libraries atdgen-runtime)
)

(library
 (name test_case_parser_lib)
 (modules test_case_parser_lib)
 (libraries catala.driver catala.clerk_lib test_case_atd)
 (flags (:standard -open Test_case_atd))
)

(executable
 (name testcase)
 (modes plugin)
 (modules testcase)
 (libraries yojson atdgen-runtime test_case_parser_lib)
 (embed_in_plugin_libraries
   otoml
   catala.clerk_lib
   atdgen-runtime
   catala_types_atd
   test_case_parser_lib))

(install
 (files
  (testcase.cmxs as catala/plugins/testcase.cmxs))
 (section libexec_root))
