(rule
 (targets catala_types_j.ml catala_types_j.mli)
 (deps catala_types.atd)
 (action
  (run atdgen -j -j-std %{deps})))

(rule
 (targets catala_types_t.ml catala_types_t.mli)
 (deps catala_types.atd)
 (action
  (run atdgen -t %{deps})))

(library
 (package catala-lsp)
 (name catala_types_atd)
 (modules catala_types_t catala_types_j)
 (libraries atdgen-runtime)
)

(library
 (name test_case_parser_lib)
 (modules test_case_parser_lib)
 (libraries catala.driver catala.clerk_lib catala_types_atd)
 (flags (:standard -open Catala_types_atd))
)

(executable
 (name testcase)
 (modes plugin)
 (modules testcase)
 (libraries yojson atdgen-runtime test_case_parser_lib)
 (embed_in_plugin_libraries
   otoml
   catala.clerk_lib
   atdgen-runtime
   catala_types_atd
   test_case_parser_lib))

(install
 (files
  (testcase.cmxs as catala/plugins/testcase.cmxs))
 (section libexec_root))
