(executable
 (name main_lsp)
 (package catala-lsp)
 (public_name catala-lsp)
 (libraries lib)
 (modules Main_lsp)
 (flags (:standard -open Lib)))
 (flags (:standard) -open Lib))

(library
 (name lib)
 (package catala-lsp)
 (libraries
  threads.posix
  lsp
  linol
  linol-lwt
  gen
  logs
  logs.fmt
  catala.driver
  catala.surface
  catala.clerk_lib
  uri
  re)
 (modules
  (:standard \ Main))
 (flags (:standard -open Clerk_lib)))

(alias
 (name lsp)
 (deps main_lsp.exe))
