(executable
 (name main_lsp)
 (package catala-lsp)
 (public_name catala-lsp)
 (libraries lib)
 (modules Main_lsp)
 (flags
  (:standard -open Lib)))

(executable
 (name main_dap)
 (package catala-lsp)
 (public_name catala-dap)
 (libraries lib)
 (modules Main_dap)
 (flags (:standard) -open Lib))

(library
 (name lib)
 (package catala-lsp)
 (libraries
  threads.posix
  linol
  linol-lwt
  dap.rpc_lwt
  gen
  logs
  logs.fmt
  catala.driver
  catala.surface
  catala.clerk_lib
  ptime.clock.os
  uri
  re
  catala_types_atd)
 (modules
  (:standard \ Main_lsp Main_dap))
 (preprocess
  (pps ppx_deriving_yojson ppx_here ppx_deriving.make))
 (flags
  (:standard -open Clerk_lib -open Catala_types_atd)))

(alias
 (name lsp)
 (deps main_lsp.exe main_dap.exe))
