(library
 (package catala-lsp)
 (name test_case_parser_lib)
 (modules testcase_parser testcase_cli)
 (libraries catala.driver catala.clerk_lib catala_types_atd catala.clerk_driver)
 (flags
  (:standard -open Catala_types_atd)))

(executable
 (name testcase_plugin)
 (modes plugin)
 (modules testcase_plugin)
 (libraries yojson atdgen-runtime test_case_parser_lib)
 (embed_in_plugin_libraries
  otoml
  catala.clerk_lib
  atdgen-runtime
  catala_types_atd
  test_case_parser_lib))

(executable
 (name testcase)
 (modes exe)
 (modules testcase)
 (libraries yojson atdgen-runtime test_case_parser_lib)
)

(install
 (files
  (testcase_plugin.cmxs as catala/plugins/testcase.cmxs))
 (section libexec_root))

(install
 (files (testcase.exe as testcase))
 (section bin))
